...
                                <color key="backgroundColor" name="primary_color"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="S9a-Df-btt"/>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="70" id="WDq-Pw-dDw"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="Montserrat-Bold" family="Montserrat" pointSize="17"/>
                                <state key="normal" title="from">
                                    <color key="titleColor" name="white_color"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                        <integer key="value" value="5"/>
                                    </userDefinedRuntimeAttribute>
...
                                <color key="backgroundColor" name="primary_color"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="2Jq-3b-69x"/>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="70" id="O1c-7B-HBA"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="Montserrat-Bold" family="Montserrat" pointSize="17"/>
                                <state key="normal" title="to">
                                    <color key="titleColor" name="white_color"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                        <integer key="value" value="5"/>
                                    </userDefinedRuntimeAttribute>
...
                                    <segue destination="EDi-V6-Ww8" kind="show" identifier="toToList" id="Qfs-oi-fCO"/>
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="select the source currency" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iaE-cQ-7Jn" customClass="NumberInput" customModule="BTG_Converser" customModule
                                <rect key="frame" x="40" y="124" width="295" height="34"/>
                                <color key="backgroundColor" name="white_color"/>
                                <accessibility key="accessibilityConfiguration" identifier="From Input"/>
                                <color key="textColor" name="text_color"/>
                                <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="17"/>
                                <textInputTraits key="textInputTraits" keyboardType="decimalPad" returnKeyType="done"/>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zjr-F7-7Mt">
                                <rect key="frame" x="325" y="141" width="0.0" height="0.0"/>
                                <accessibility key="accessibilityConfiguration" identifier="From Code"/>
                                <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="16"/>
                                <color key="textColor" name="text_color"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xoa-0w-Sy4">
                                <rect key="frame" x="87.5" y="168" width="200" height="40"/>
                                <color key="backgroundColor" name="secondary_color"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="6Ud-f6-cQW"/>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="eUN-xF-VPd"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="Montserrat-Bold" family="Montserrat" pointSize="18"/>
                                <state key="normal" title="CONVERT">
                                    <color key="titleColor" name="white_color"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                        <integer key="value" value="5"/>
                                    </userDefinedRuntimeAttribute>
...
                                <connections>
                                    <action selector="convertButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="DwE-OU-c2K"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="select to currency" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="adi-Pc-qdn">
                                <rect key="frame" x="48" y="248" width="279" height="41"/>
                                <accessibility key="accessibilityConfiguration" identifier="Convert Value"/>
                                <fontDescription key="fontDescription" name="Montserrat-Medium" family="Montserrat" pointSize="35"/>
                                <color key="textColor" name="text_color"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="WYx-uq-piW">
                                <rect key="frame" x="169" y="329" width="37" height="37"/>
...
